--- a/Projekt/Projekt/Projekt.vcxproj
+++ b/Projekt/Projekt/Projekt.vcxproj
@@ -144,6 +144,9 @@
   <ItemGroup>
     <ClInclude Include="Functions.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="be.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
