--- a/Projekt/Projekt/Projekt.vcxproj
+++ b/Projekt/Projekt/Projekt.vcxproj
@@ -145,7 +145,7 @@
     <ClInclude Include="Functions.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="be.txt" />
+    <Text Include="be1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
