--- a/Projekt/Projekt/Projekt.vcxproj.filters
+++ b/Projekt/Projekt/Projekt.vcxproj.filters
@@ -28,7 +28,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="be.txt">
+    <Text Include="be1.txt">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
